dodanie spring boot  + vaadin

--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,31 @@
     <version>1.0-SNAPSHOT</version>
     <description>Projekt utworzony na potrzeby zdania przedmiotu MAS (Modelowanie i Analiza Systemów informacyjnych)</description>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.4</version>
+    </parent>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hibernate-version>6.4.4.Final</hibernate-version>
+        <vaadin.version>24.3.8</vaadin.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-bom</artifactId>
+                <version>${vaadin.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -47,6 +66,17 @@
             <artifactId>groovy-all</artifactId>
             <version>4.0.19</version>
             <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-core</artifactId>
+            <version>${vaadin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-spring-boot-starter</artifactId>
+            <version>24.3.8</version>
         </dependency>
 
     </dependencies>
